segue reference change
segue reference change

--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -2587,9 +2587,9 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Fv8-EL-tzo"/>
-        <segue reference="KTm-i4-nT0"/>
+        <segue reference="xEi-qz-IQe"/>
         <segue reference="YzI-Ue-2oM"/>
-        <segue reference="RTc-KO-dhc"/>
+        <segue reference="ZOl-UM-4IR"/>
         <segue reference="reF-Mh-huZ"/>
     </inferredMetricsTieBreakers>
     <resources>
