--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -99,11 +99,10 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #a6c1ee 50%,  #fbc2eb 50%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #a6c1ee 50%,  #fbc2eb 50%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #a6c1ee 50%,  #fbc2eb 50%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #a6c1ee 50%,  #fbc2eb 50%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -120,8 +119,9 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
-		color: rgba(255, 255, 255, 0.65);
+		background-image: url("images/background.jpg");
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
 	}
 
 	body, input, select, textarea {
